fix: kura-core deb postinst extracts zip before running kura_install.sh
Add mkdir + unzip to postinst so the zip is extracted to /opt/eclipse
before kura_install.sh runs, creating the symlink and setting up systemd.
Verify all 10 debs install without dpkg conflicts on VM; kura starts
successfully; kura-alpine and kura-ubi8 Docker images run correctly.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>